style change for text box input

--- a/office/index.html
+++ b/office/index.html
@@ -179,6 +179,12 @@ div.passage {
 
 button.active {
     background-color: #660000;
+}
+
+input.macro-textbox,input.macro-textbox:hover,input.macro-textbox:active,input.macro-textbox:focus{
+    background-color: white;  
+    color: rgb(51, 51, 51); 
+    min-width: 9em;    
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/* twine-user-script #1: "Story JavaScript" */
 setup.dom_rank = function(score) {
 	var rank;
